--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,24 @@
 body
 {
-    text-align: center;
-    font-family: "Arial";    
-}
-h1
-{
     color: cadetblue;
+    text-align: left;
+    font-family: "Arial";
+    font-size: 16px;    
 }
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid sienna;
+    margin: auto;
+}
+
+#container h1
+{
+font-size: 20px;
+color: cornflowerblue;
+}
+
+
