Estructura inicial de la cabecera# Please enter the commit message for your changes. Lines starting# with '#' will be ignored, and an empty message aborts the commit.## On branch cabecera# Changes to be committed:#	modified:   blopost.html#	modified:   css/estilos.css#

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,4 +21,9 @@ font-size: 20px;
 color: cornflowerblue;
 }
 
-
+#cabecera h1
+{
+    color: rgba(100, 237, 146, 0.432);
+    font-size: 20px;
+    text-align: center;
+}
