--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,24 +1,53 @@
 body
 {
-    color: cadetblue;
+    color: whitesmoke;
     text-align: left;
     font-family: "Arial";
-    font-size: 16px;    
-}
+    font-size: 16px;  
+    margin: 0;
+    padding: 0;  
+    margin-top: 1.5em;
+    margin: 0 auto;
+}   
+
 
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0.5em;
     text-align: left;
-    border: 1px solid sienna;
-    margin: auto;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+    background-color:grey;
 }
 
-#container h1
+#cabecera
 {
-font-size: 20px;
-color: cornflowerblue;
+    background:blueviolet;
+    font-weight: bold;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.5);
 }
 
+#cabecera #tagline
+{
+    font-weight: normal;
+    margin: 0 0 0 0;
+    font-size: 0.8
+    
+    em;
+}
 
+#post h1
+{
+    font-size: 25px;
+    text-align: justify;
+}
+
+#post p
+{
+    text-align: justify;
+    
+}
