--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: whitesmoke;
+    color: rgb(46, 43, 43);
     text-align: left;
     font-family: "Arial";
     font-size: 16px;  
@@ -8,6 +8,8 @@ body
     padding: 0;  
     margin-top: 1.5em;
     margin: 0 auto;
+    background-color: rgb(2, 2, 48);
+    background-attachment: fixed;
 }   
 
 
@@ -18,16 +20,18 @@ body
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
-    background-color:grey;
+    background-color:rgb(233, 228, 228);
+   
 }
 
 #cabecera
 {
-    background:blueviolet;
+background-color: #33A; 
+background-image: url("../Imagenes/Dragon.jpg") 10px 10px;
     font-weight: bold;
     color: white;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 0.5em;
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.5);
 }
 
@@ -40,6 +44,12 @@ body
     em;
 }
 
+#cabecera #logo
+{
+    width: 30px;
+    vertical-align: middle;
+
+}
 #post h1
 {
     font-size: 25px;
