--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,3 +51,12 @@ body
     text-align: justify;
     
 }
+
+#footer
+{
+    background: rgb(51, 51, 170);
+    color: white;
+    text-align: center;
+    font-size: 0.7em;
+    padding: 0.3em;
+}
